# fastapi-practice

./: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: deps.py  main.py
app/api/routes/: auth.py  todo.py
app/core/: config.py  db.py  security.py
app/crud/: base.py  todo.py  user.py
app/models/: todo.py  user.py
