[project]
name = "fastapi-prac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "psycopg[binary]",
    "alembic",
    "pydantic",
    "python-dotenv",
    "passlib[bcrypt]",
    "pytest",
    "python-multipart",
    "python-jose[cryptography]",
    "pydantic-settings"
]
